--- a/styles/custom.css
+++ b/styles/custom.css
@@ -1,5 +1,5 @@
-/* Adapted from https://github.com/barbagroup/CFDPython. Copyright (c) Barba group */
-
+CSS style adapted from https://github.com/barbagroup/CFDPython. Copyright (c) Barba group
+<link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
@@ -12,57 +12,66 @@
         font-family: "Computer Modern";
         src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');
     }
-/*     div.cell{
-         width:800px;
-        margin-left:16% !important;
-         margin-right:auto;
-    } */
-tr, td, th{
-    font-size:110%;
-}
 
+    /*div.cell{
+        width:800px;
+        margin-left:16% !important;
+        margin-right:auto;
+    } */
+
+    /* set the font size in tables */
+    tr, td, th{
+        font-size:110%;
+    }
+
+    /* spec for headers */
     h1 {
         font-family: 'Bitter', serif;
     }
+
     h2 {
         font-family: 'Fenix', serif;
     }
+    
     h3{
-		font-family: 'Fenix', serif;
+        font-family: 'Fenix', serif;
         margin-top:12px;
         margin-bottom: 3px;
-       }
-	h4{
-		font-family: 'Fenix', serif;
-       }
+    }
+
+    h4{
+        font-family: 'Fenix', serif;
+    }
+
     h5 {
         font-family: 'Alegreya Sans', sans-serif;
-    }	   
+    }
+
     div.text_cell_render{
-        font-family: 'Alegreya Sans','Lora', 'Oxygen',Computer Modern, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
-        line-height: 150%;
-        font-size: 140%;
-/*         width:600px; */
-/*         margin-left:auto;
-        margin-right:auto; */
+        font-family: 'Merriweather','Alegreya Sans','Lora', 'Oxygen', "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+        line-height: 160%;
+        font-size: 130%;
     }
+
     .CodeMirror{
-            font-family: "Source Code Pro";
-			font-size: 100%;
+        font-family: "Source Code Pro";
+        font-size: 100%;
     }
-/*    .prompt{
-        display: None;
-    }*/
+
     .text_cell_render h1 {
         font-weight: 200;
         font-size: 32pt;
-		line-height: 100%;
+        line-height: 120%;
         color:#CD2305;
-/*         color: #16774a; */
         margin-bottom: 0.5em;
         margin-top: 0.5em;
         display: block;
-    }	
+    }
+
+    .text_cell_render h2 {
+        font-size: 26pt;
+    }
+
     .text_cell_render h5 {
         font-weight: 300;
         font-size: 16pt;
@@ -76,6 +85,11 @@ tr, td, th{
     .warning{
         color: rgb( 240, 20, 20 )
     }  
+
+/*  div#notebook {background-color: #1e1e1e; border-top: none;}
+    div#notebook-container {background-color: rgb(180, 180, 180);}
+ */
+
 </style>
 
 <script>
@@ -90,6 +104,7 @@ tr, td, th{
                 displayAlign: 'center', // Change this to 'center' to center equations.
                 "HTML-CSS": {
                     availableFonts: ["TeX"],
+                    scale: 100,
                     styles: {'.MathJax_Display': {"margin": 4}}
                 }
         });
