--- a/styles/custom.css
+++ b/styles/custom.css
@@ -70,6 +70,15 @@ CSS style adapted from https://github.com/barbagroup/CFDPython. Copyright (c) Ba
 
     .text_cell_render h2 {
         font-size: 26pt;
+        text-align: center;
+    }
+
+    .text_cell_render h3 {
+        font-size: 20pt;
+    }
+
+    .text_cell_render h4 {
+        font-size: 18pt;
     }
 
     .text_cell_render h5 {
